Add test stage in build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,14 @@ jobs:
           --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.build_date }}" \
           --tag "${{ steps.prepare.outputs.docker_image }}:latest" \
           --file Dockerfile . 
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Test docker image
+        run: |
+          docker run --rm colachen/trojan trojan --version
